# giant-wiki

./: .env.example  .gitignore  .railwayignore  CHECKS  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  dev.Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  railpack.json  railway-web.toml  railway-worker.toml
.github/workflows/: ci.yml  deploy-internal.yml
core/: context_processors.py  settings.py  urls.py  views.py  wsgi.py
core/templates/: base.html
core/templates/users/: login.html  logout.html  profile.html
core/templates/wiki/: create.html  edit.html  history.html  page.html  search.html
core/tests/: test_context_processors.py
scripts/: celery-worker.sh  dev-start.sh  dev-worker.sh  railway-start.sh  railway-worker.sh
src/: ARCHITECTURE.md  conftest.py  manage.py
src/core/: __init__.py  apps.py  celery.py  context_processors.py  models.py  settings.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_task_celery_task_id.py
src/core/templates/: base.html
src/core/tests/: test_context_processors.py  test_tasks.py  test_views.py
src/wiki/: apps.py  markdown_extensions.py  models.py  notifications.py  tasks.py  test_cache.py  test_git_storage.py  test_mermaid.py  test_notifications.py  test_search.py  test_sidebar.py  test_staleness.py  test_tasks.py  test_widgets.py  views.py
src/wiki/services/: cache.py  git_storage.py  search.py  sidebar.py  widgets.py
src/wiki/templatetags/: history_filters.py  staleness.py  wiki_filters.py
users/: context_processors.py  forms.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py
wiki/: documents.py  feeds.py  forms.py  models.py  views.py
wiki/migrations/: 0001_initial.py  0002_auto_20220527_1537.py  0002_fileupload.py  0003_attachments.py  0004_remove_attachments_url.py  0005_auto_20240712_1216.py  0005_auto_20241029_1353.py
(+11 files in other folders)
