[tool.poetry]
name = "giant-wiki"
version = "0.1.0"
description = ""
authors = ["Jon Atkinson <jon.atkinson@giantmade.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
dj-database-url = "^0.5.0"
django-crispy-forms = "^1.11.1"
gunicorn = "^20.0.4"
loguru = "^0.5.3"
Markdown = "^3.3.4"
whitenoise = "^5.2.0"
elasticsearch-dsl = ">=6.0.0,<7.0.0"
django-elasticsearch-dsl = "6.5.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
