[project]
name = "giant-wiki"
version = "1.0.0"
description = "Internal documentation wiki with Git-based storage"
authors = [{ name = "Jon Atkinson", email = "jon.atkinson@giantmade.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "Django>=6.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "whitenoise>=6.11.0",
    "python-decouple>=3.8",
    "dj-database-url>=2.3.0",
    "Markdown>=3.7",
    "celery[redis]>=5.6.0",
    "django-redis>=6.0.0",
    "python-frontmatter>=1.1.0",
    "randomname>=0.2.1",
    "mysqlclient>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-django>=4.11.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.2.0",
    "ruff>=0.14.0",
    "ipdb>=0.13.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
